--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
             
             <h3 style="margin-top: 30px; margin-bottom: 15px;">Certifications</h3>
             <ul style="list-style-position: inside;">
-                <li style="margin-bottom: 10px;">Responsive web design (certified by freecodecam.org)</li>
-                <li style="margin-bottom: 10px;">Javascript algorithms and data structure by freecodecam.org</li>
+                <li style="margin-bottom: 10px;">Responsive web design (certified by freecodecamp.org)</li>
+                <li style="margin-bottom: 10px;">Javascript algorithms and data structure by freecodecamp.org</li>
                 <li style="margin-bottom: 10px;">TCS iON Career Edge - Young Professional Course</li>
                 <li style="margin-bottom : 10px;"> Hp Life Agile Methodologies</li>
             </ul>
